<resources>
    <string name="app_name">inksy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="NumberText">By Continuing you may receive an SMS for verification. Message and data rated may apply.</string>
    <string name="EmptryNumberError">Mobile Number cannot be empty</string>
    <string name="NumberValidError">Number is Not Valid</string>
    <string name="email_address">Email Address</string>
    <string name="enter_password">Enter Password</string>
    <string name="ErrorEmail">Email Address cannot be empty</string>
    <string name="ErrorPassword">Password cannot be empty</string>
    <string name="visible">visible</string>
    <string name="nonvisible">nonVisible</string>
    <string name="your_name">Your Name</string>
    <string name="lets_go">Lets Go</string>
    <string name="my_journals">My Journals</string>
    <string name="more">More</string>
    <string name="doodle_store">Doodle Store</string>
    <string name="artist_panel">Artist Panel</string>
    <string name="more_information">More Information</string>
    <string name="share">Share</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log Out</string>
    <string name="support">Support</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="journal">Journal</string>
    <string name="people">People</string>
    <string name="approved_art">Approved Art</string>
    <string name="others">Others</string>
    <string name="about_us">About Us</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="amount_received">Amount Received</string>
    <string name="select_category">Select Category</string>
    <string name="next">Next</string>
    <string name="daily_exercise">Title Here</string>
    <string name="termsandconditionartist">By clicking "I am in"" you agree to the following <b>Terms and Conditions</b> without reservation</string>
    <string name="text1"><u><b>AGREEMENT AND CONSENT TO USE ELECTRONIC SIGNATURES</b></u> \n\nBecause this App is exclusively electronic in nature, it is expedient for all parties to consent to the use of electronic signatures. By clicking “I Accept” below, you are Agreeing to the use of electronic signatures – which in this App will take the form of your clicking of an “I Accept” button – and are affixing your electronic signature on Agreement to that end.

You have the right to receive paper copies by simply printing out any of the Agreements which may appear in the App, or printing a screenshot thereof.

You have the right to withdraw your consent to sign electronic documents with an electronic signature at any time by sending an email stating that request to admin@inksyapp.com. This will have no effect on any electronic signatures you entered prior to your withdraw of consent.

To view and retain the electronic documents, you may be required to have certain hardware and software including, but not limited to, an email address; a computer, tablet, or mobile device with internet access; storage media with sufficient space; and a current web browser with standard plugins and code languages enabled.

By clicking “I Accept,” you acknowledge that you can access and retain electronic documents.
By clicking “I Accept,” you are providing electronic consent to the use of electronic documents and signatures for the duration of any relationship between you and the App, and with regard to any interactions between you and the App or its owners, management, or users relating to the App or materials posted on the App.

By click “I Accept,” you agree that your electronic signature – in the form of clicking “I Accept” – is and shall be the legally binding equivalent to your handwritten signature and shall have the same validity and effect.
</string>
    <string name="text2"><u><b>TERMS AND CONDITIONS OF USE AGREEMENT, CERTIFICATION OF OWNERSHIP, AND LIMITED LICENSE FOR USE OF COPYRIGHTED MATERIAL \n\n
READ CAREFULLY
</b></u> \n\nThis Agreement between you and Inksy, Inc. (the “Service”), entered into as of the date you click “I Accept” below, is for the use of the application known as Inksy (the “App”). By clicking “I Accept” below, you Agree as follows:

You must be thirteen (13) years old or older.  If you are between thirteen and eighteen years old, a parent must Accept this Agreement on your behalf.

You may offer material for purchase within the App. Likewise, you may purchase material within the App. The Service and the App will (jointly) take a fifteen percent (15%) commission on any sales, unless expressly stated otherwise by the Service. Such amounts are calculated prior to the addition of any applicable sales or use tax. Any sales convey to the purchaser a non-exclusive but irrevocable and permanent license to use, copy, transmit, and display the material subject to the sale, for personal purposes only and not for re-sale. Purchasers shall retain such rights in perpetuity and throughout the universe.

You represent, warrant, and certify that you are the owner of any material you post, share, or feature in the App, and that you have authority to post, share, or feature such material. You represent, warrant, and certify that any material you post does not infringe upon any copyright, trademark, patent, right of publicity, or any other right. Any art made with the assistance of AI must only be derived from works that do not hold copyright or trademark. You will hold harmless, indemnify, and defend the Service against any action or claim brought against it due to the posting, display, copying, or use of any material you post, share, or feature in the App, including reimbursement of all attorney fees and other costs of defense.

While you are the one displaying material in the App and the App is a service provider, you grant to the Service and the App a non-exclusive license for the use of any material you post, share, or feature in the App, such that any such material may be used in perpetuity and throughout the universe, on the terms described herein.

You may cease sharing, displaying, or featuring material in the App at your own discretion at any time, but such removal will have no effect on prior purchasers or purchases.

The Service and the App will retain sole discretion to remove any content either deems potentially dangerous, unlawful, inappropriate, or offensive. The Service and the App reserve the right to delete such material or remove access to it, including access by purchasers. Notice need not be provided to you. Likewise, the Service and the App are “service providers” as defined in the Digital Millennium Copyright Act, 17 U.S.C. § 512, and will comply with all requirements relating thereto, including prompt removal of allegedly infringing material.

You will use the App civilly and lawfully and will not engage in any disrespectful, abusive, unlawful, or unethical behavior in your use of the App. Your use of the App is subject to your adherence to these terms and the other terms set forth herein, and may be terminated without notice by the App and the Service, at their sole discretion, if either has reason to believe you have violated any of these terms.

The Service and the App are not responsible for the acts or omissions of other users of the App. The Service and the App are under no obligation to police use of the App or screen prospective users.

The App is subject to change in any way, at the App and the Service’s sole discretion, without notice to you. These terms of use are subject to change without notice to you, and are always available at http://www.inksyapp.com/ or by request to info@inksyapp.com. Your continued use of the App constitutes an assent to any changes to these terms of use. Should you choose not to be so bound, you may delete your account. Account deletion has no effect on the prior existing rights or obligations of the parties, or any ongoing obligations of the parties created by prior conduct.

The rights bargained for by the App and the Service are transferable. Your rights are not.

This Agreement is entered into in the State of California and in the City of Los Angeles. You agree that any and all claims relating to this Agreement, the App, or the Service must be brought exclusively in the Superior Courts of the County of Los Angeles. You agree that this Agreement and any interactions between you and the App or the Service are to be interpreted under and governed by the laws of the State of California and the United States.

Click “I Accept” to agree to the above and affix your binding electronic signature to the Agreement.

    </string>
    <string name="text3"><u><b>DMCA</b></u> \n\nWe respect the intellectual property rights of others. Anyone who believes their work has
been reproduced in a way that constitutes copyright infringement may – and should – notify our agent by sending an email with subject line “DMCA REQUEST” to copyright@inksyapp.com, or mailing a letter to 13400 Riverside Dr. Suite 303, Sherman Oaks, CA, 91423 containing the following information:

a. Identification of any copyrighted work that you claim has been infringed;
b. Identification of the material that you claim is infringing and needs to be removed, including a description of where it is located so that we may locate it;
c. Your address, telephone number, and e-mail address, so that we may contact you about your claim;
d. A signed statement that the above information is accurate; that you have a good faith belief that the identified use of the material is not authorized by the copyright owner, its agents, or the law; and, under penalty of perjury, that you are the copyright owner or are authorized to act on the copyright owner’s behalf in this situation.

Upon receipt of such a notice, we will act expeditiously to remove, or disable access to, the material. Please be aware that there are substantial penalties for false claims.

If a notice of copyright infringement has been wrongly filed against you, you may – and should – notify our agent by sending an email with subject line “DMCA REQUEST” to info@inksyapp.com, or mailing a letter to 13400 Riverside Dr. Suite 303, Sherman Oaks, CA, 91423 containing the following information:

a. A physical or electronic signature of the poster;
b. Identification of the material that has been removed or to which access has been disabled and the location at which the material appeared before it was removed or access to it was disabled;
c. A statement under penalty of perjury that you have a good faith belief that the material was removed or disabled as a result of mistake or misidentification;
d. Your name, address, telephone number, and email address; a statement that you consent to the jurisdiction of federal district court for the judicial district in which your address is located, or if your address is located outside of the U.S., for any judicial district in which the service provider may be found; and that you will accept service of process from the complainant.

If you give notice of copyright infringement by e-mail, an agent may begin investigating the alleged copyright infringement; however, we must receive your signed statement by mail or as an attachment to your e-mail before we are required to take any action.

This information is not legal advice. We recommend you seek independent legal counsel before filing a notification or counter-notification. For further information, please visit the website of the United States Copyright Office at:.

</string>
    <string name="collaborate_with_us">Collaborate with us</string>
    <string name="manage_payment_method">Manage Payment Method</string>
    <string name="i_am_in">I am in</string>
    <string name="description_here">Description Here</string>
    <string name="set_privacy">Set Privacy</string>
</resources>