<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".UI.Fragments.create_journal_entry">


        <ScrollView
            android:id="@+id/scrollView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toTopOf="@+id/viewtab"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="0dp">

                <View
                    android:id="@+id/view20"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:background="@color/black_transparent"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/checked"
                    app:layout_constraintTop_toTopOf="@+id/coverImage" />


                <ImageView
                    android:id="@+id/ivBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_8sdp"
                    android:elevation="11dp"
                    android:padding="@dimen/_8sdp"
                    android:src="@drawable/back_white"
                    app:layout_constraintBottom_toBottomOf="@+id/view20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/checked"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_8sdp"
                    android:elevation="11dp"
                    android:padding="@dimen/_8sdp"
                    android:text="@string/next"
                    android:textColor="@color/realwhite"
                    android:textSize="@dimen/_18sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <View
                    android:id="@+id/view21"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="-10dp"
                    android:background="@color/fullblackpattihigh"
                    android:elevation="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/coverImage" />

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="20dp"
                    android:elevation="10dp"
                    android:src="@drawable/landscape"
                    app:layout_constraintBottom_toBottomOf="@+id/view21"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/view21"
                    app:tint="@color/realwhite" />

                <ImageView
                    android:id="@+id/coverImage"
                    android:layout_width="match_parent"
                    android:layout_height="310dp"
                    android:scaleType="center"
                    android:src="@drawable/image"
                    android:visibility="visible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_marginLeft="10dp"
                    android:id="@+id/note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:elevation="11dp"
                    android:text="Click to add a cover image. Landscape photos work best."
                    android:textColor="@color/realwhite"
                    android:textSize="10dp"
                    app:layout_constraintBottom_toBottomOf="@+id/view21"
                    app:layout_constraintStart_toStartOf="@+id/coverImage"
                    app:layout_constraintTop_toTopOf="@+id/view21" />

                <EditText
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_16sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sfmedium"
                    android:hint="@string/daily_exercise"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_20sdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/coverImage" />


                <EditText
                    android:id="@+id/category"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:clickable="false"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:fontFamily="@font/sfmedium"
                    android:text="@string/select_category"
                    android:textColor="@color/appBlue"
                    android:textSize="@dimen/_14sdp"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/title" />

                <EditText
                    android:id="@+id/description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_16sdp"
                    android:background="@android:color/transparent"
                    android:fontFamily="@font/sfmedium"
                    android:hint="@string/description_here"
                    android:overScrollMode="always"
                    android:scrollbarStyle="insideInset"
                    android:scrollbars="vertical"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/title"
                    app:layout_constraintTop_toBottomOf="@+id/category" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

        <View
            android:id="@+id/viewtab"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="-16dp"
            android:background="@drawable/round_border_edittext_solid_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/audience_setting" />


        <ImageView
            android:id="@+id/audience_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:src="@drawable/setting"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/audience_setting_text"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:text="@string/set_privacy"
            android:textSize="16dp"
            app:layout_constraintBottom_toBottomOf="@+id/viewtab"
            app:layout_constraintStart_toEndOf="@+id/audience_setting"
            app:layout_constraintTop_toTopOf="@+id/viewtab" />


        <!--        <ImageView-->
        <!--            android:id="@+id/audience_setting"-->
        <!--            android:layout_width="wrap_content"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="@dimen/_8sdp"-->
        <!--            android:layout_marginBottom="@dimen/_16sdp"-->
        <!--            android:src="@drawable/setting"-->
        <!--            app:layout_constraintBottom_toBottomOf="parent"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/view1"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/image" />-->

        <!--        <View-->
        <!--            android:id="@+id/view1"-->
        <!--            android:layout_width="1dp"-->
        <!--            android:layout_height="0dp"-->
        <!--            android:layout_marginStart="@dimen/_8sdp"-->
        <!--            android:background="@color/appgrey"-->
        <!--            app:layout_constraintBottom_toBottomOf="@+id/audience_setting"-->
        <!--            app:layout_constraintStart_toEndOf="@+id/audience_setting"-->
        <!--            app:layout_constraintTop_toTopOf="@+id/audience_setting"-->
        <!--            app:layout_constraintVertical_bias="0.0" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>